welcome.lessons.welcome.bat.bool2.InOrder.scala.error
inOrder:2: error: type mismatch;
 found   : Unit
 required: Boolean
  if (c>=b) {
  ^